--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.29.4",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.38.0",
     "react-router-dom": "^6.4.2",
